--- a/OpenWGA/plugins/management/design/tml/html/approval/login.tml
+++ b/OpenWGA/plugins/management/design/tml/html/approval/login.tml
@@ -1,6 +1,6 @@
 <tml:action id="login">
 
-	var dbkey=request.db;
+	var dbkey=request.getParameter("db");
 	var database=wgacore.getContentdbs().get(dbkey)
 	if(!database)
 		return tmlform.addmessage(label("login.database-not-found", createlist([encode("html", dbkey)])));
@@ -30,7 +30,7 @@
 		if(option("msg"))
 			tmlform.addmessage(option('msg'))
 	</tml:script>
-	<h1>Anmelden an Website <tml:script expression="request.db"/></h1>
+	<h1>Anmelden an Website <tml:script expression="request.getParaeter('db')"/></h1>
 	<tml:case condition="tmlform.hasmessages()">
 		<div class="alert alert-danger">
 			<h4><tml:label key="login.error-message"/></h4>
