--- a/OpenWGA/plugins/management/design/tml/html/approval/toolbar.tml
+++ b/OpenWGA/plugins/management/design/tml/html/approval/toolbar.tml
@@ -1,6 +1,6 @@
 <div class="toolbar">
 	
-	<tml:case condition="AFW.database(request.db).isEditor()" context="[db:{request.db}/docid:{request.key}]" iscontextvalid="true">
+	<tml:case condition="AFW.database(option('dbkey')).isEditor()" context="[db:{option('dbkey')}/docid:{option('key')}]" iscontextvalid="true">
 		<tml:case condition="STATUS==content().STATUS_REVIEW && content().getWorkflow().isApprovableByUser()">
 			<a class="btn button" href="#approve" data-modal="show">
 				<span class="icon glyphicon glyphicon-cloud-upload"></span>
@@ -12,7 +12,7 @@
 			</a>
 		</tml:case>
 
-		<a class="btn button" href="<tml:script expression="CM.getAuthoringURL(request.db, request.key)"/>">
+		<a class="btn button" href="<tml:script expression="CM.getAuthoringURL(option('dbkey'), option('key'))"/>">
 			<span class="icon glyphicon glyphicon-open"></span>
 			<div class="text">Im Content Manager öffnen</div>
 		</a>
