jquery-tree symbol style

--- a/OpenWGA/plugins/afw/design/tml/stylesheet/jquery-tree.tml
+++ b/OpenWGA/plugins/afw/design/tml/stylesheet/jquery-tree.tml
@@ -78,7 +78,10 @@
 						margin_left: 20
 					},
 					".symbol": {
-						float: "right"
+						width: 20,
+						text_align: "center",
+						float: "right",
+						line_height: "inherit"						
 					}
 				}
 			},
