--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/login/settings.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/login/settings.tml
@@ -36,13 +36,12 @@
 <label><tml:label key="login.settings.if-not-logged-in"/>:</label>
 <div style="margin:10px">
 	<tml:input type="select" name="{scoped:action}" options="{label('login.settings.if-not-logged-in.options')}" mode="{option:mode}"/>
+	<p style="margin:15px 0 5px"><tml:label key="login.settings.not-logged-in-message"/>:</p>
+	<tml:input type="textarea" name="{scoped:loginmessage}" mode="{option:mode}"
+		cssstyle="width:100%;resize:none" 
+		html_placeholder="{label('login.settings.logginmessage.placeholder')}"/>
 </div>
 
-<label><tml:label key="login.settings.not-logged-in-message"/>:</label>
-<div style="margin:10px">
-	<tml:input type="textarea" name="{scoped:loginmessage}" cssstyle="height:auto;width:100%;overflow:hidden" mode="{option:mode}">
-		onkeyup="this.rows=this.value.split('\n').length"
-		rows="<tml:script expression="item(WGA.scoped('loginmessage')) ? item(WGA.scoped('loginmessage')).split('\n').length : 1"/>"
-	</tml:input>
-</div>
-
+<script>
+	BI.makeTextareasResizable("<tml:script expression="tmlform.formid"/>");
+</script>
