#00005191: Image Module: Drag&Drop from Filesystem: filename not added lowercased to module definition

--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/image/dragdrop.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/image/dragdrop.tml
@@ -24,7 +24,7 @@
 ## LICENSE END #################################################################
 
 <tml:action id="setImage">
-	var filename = request.getParameter("filename")
+	var filename = request.getParameter("filename").toLowerCase()
 	var dbkey = request.getParameter("dbkey")
 	var container = request.getParameter("container")
 
