--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/form/portlet-form.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/form/portlet-form.tml
@@ -90,14 +90,19 @@
 		var fields = forminfo.keySet().iterator();
 		while(fields.hasNext()){
 			var fieldinfo = forminfo.get(fields.next());
-			var field = fieldinfo.get("name");
+			var field = fieldinfo.get("name").trim();
 			var label = fieldinfo.get("label");
+			
+			console.log("["+field+"]", tmlform.field(field));
+			
 			var values = tmlform.fieldList(field).iterator();
 			mailbody += "<b>" + label + "</b> (" + field + "):<br>";
 			while(values.hasNext())
 				mailbody += (encode("html", values.next()) +"<br>");
 			mailbody += "<br>";
 		}
+		return;
+		
 		if(tmlform.getfilenames().size()){
 			mailbody += "<hr>"
 			for(let filename in Iterator(tmlform.getfilenames())){
