module download-list: added alt to image to avoid w3c warnings

--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/download-list/render-file.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/download-list/render-file.tml
@@ -26,7 +26,7 @@
 			<div class="image">
 				<tml:script expression="AFW.content(_ctx.KEY).attachment(_filename).getThumbnailURL({width:100})" var="_url"/>
 				<tml:case condition="_url">
-					<img src="<tml:item name="_url"/>">
+					<img src="<tml:item name="_url"/>" alt="<tml:script expression="_ctx.content().getFileMetaData(_filename).title || _filename"/>">
 				</tml:case>
 			</div>
 			<div class="filename">
