#00005208: content modules "form/form-field" improvements

--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/form/field-settings.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/form/field-settings.tml
@@ -35,6 +35,11 @@
 	(Empfohlen: a-Z und _. Keine Leerzeichen oder Umlaute)
 </div>
 
+<label>Focus:</label>
+<div style="margin:10px">
+	<tml:input name="{scoped:focus}" mode="{option('mode')}" type="boolean" options="Focus wenn Seite geladen wird|true"/>
+</div>
+
 <label><tml:label key="form.settings.field-type"/>:</label>
 <div style="margin:10px">
 	<tml:input name="{scoped:fieldtype}" type="select" options="{label('form.settings.field-type.options')}"
