--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/form/render.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/form/render.tml
@@ -1,2 +1,2 @@
 
-<tml:portlet name="cm-modules-form" ref="::portlet-form" ajax="true"/>
+<tml:portlet name="[cm-modules-form{option('ns')}]" ref="::portlet-form" ajax="true" portletmode="view" />
