--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/form/render_field.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/form/render_field.tml
@@ -65,7 +65,7 @@
 	</label>
 	<div class="data">
 		<tml:input name="{_fieldname}"
-			focus="{isFirstLoop() && CMM.setting('fieldtype')!='date'}"
+			focus="{CMM.setting('focus')||false}"
 			validation="{_validation||true}"
 			message="{_message}"
 			labeled="true"
