--- a/OpenWGA/plugins/afw/design/scripts/css/jquery-columnslider.scss
+++ b/OpenWGA/plugins/afw/design/scripts/css/jquery-columnslider.scss
@@ -44,7 +44,7 @@
 			height: 20px;
 			width: 50px;
 			&.disabled {
-				color: #efefef !important;
+				opacity: .2;
 				cursor: default;
 			}
 		}
