$clean: hide cm.add-your-modules-please text

--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/render.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/render.tml
@@ -37,7 +37,7 @@
 
 <tml:if condition="$mc.mods.isEmpty()">
 	<tml:then>
-		<tml:case if="$mc.mayEdit">
+		<tml:case if="$mc.mayEdit & !$mc.isCleanMode">
 			<a class="WGA-Item-Edit no-modules" style="display:none" href="#" id="no-modules-<tml:item name="$mc.uid"/>"
 				title = "<tml:label key="cm.click-to-add-modules"/>"
 			>
