#00005215: added and option to clear the registry in admin client

--- a/OpenWGA/plugins/admin/design/tml/html/home/problems/critical-problems.tml
+++ b/OpenWGA/plugins/admin/design/tml/html/home/problems/critical-problems.tml
@@ -1,4 +1,4 @@
-<tml:include designdb="@ui" ref="windowview" o_title="The following problems occured">
+<tml:include designdb="@ui" ref="windowview" o_title="The following administrative problems occured">
 
 	<tml:option name="config" scope="local">
 		tbar: [
