--- a/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/settings/user-defined.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/settings/user-defined.tml
@@ -21,7 +21,7 @@
 	_dialog_closed=true;
 </tml:action>
 
-<tml:form id="form-user-defined-settings" mode="{STATUS==content().STATUS_DRAFT ? 'edit':'view'}" html_data-context="{path}" unless="_dialog_closed">
+<tml:form id="form-user-defined-settings" mode="{App.mayUpdateContent(this) ? 'edit':'view'}" html_data-context="{path}" unless="_dialog_closed">
 
 	<div class="header">
 		Benutzerdefinierte Eigenschaften
